--- a/team.html
+++ b/team.html
@@ -42,7 +42,7 @@
         <div class="execs">
 
         <div class="becky">
-            <img class="profilepic" src="/images/IMG_4766.png" alt="placeholder">
+            <img class="profilepic" src="images/IMG_4766.png" alt="placeholder">
             <div class="profiletext">
             <h4>Name:</h4>
             <p>Rebecca Laruffa</p>
@@ -55,7 +55,7 @@
         </div>
 
         <div class="eleanor">
-            <img class="profilepic" src="/images/IMG_7371.png" alt="placeholder">
+            <img class="profilepic" src="images/IMG_7371.png" alt="placeholder">
             <div class="profiletext">
             <h4>Name:</h4>
             <p>Eleanor Nyguen</p>
@@ -68,7 +68,7 @@
         </div>
 
         <div class="Anderson">
-            <img class="profilepic" src="/images/anderson.jpg" alt="placeholder">
+            <img class="profilepic" src="images/anderson.jpg" alt="placeholder">
             <div class="profiletext">
             <h4>Name:</h4>
             <p>Anderson Stark</p>
@@ -79,7 +79,7 @@
             </div>
         </div>
         <div class="jeslyn">
-            <img class="profilepic" src="/images/jeslyn.jpg" alt="placeholder">
+            <img class="profilepic" src="images/jeslyn.jpg" alt="placeholder">
             <div class="profiletext">
             <h4>Name:</h4>
             <p>Jeslyn Pratiknjo</p>
@@ -90,7 +90,7 @@
             </div>
         </div>
         <div class="sarah">
-            <img class="profilepic" src="/images/sarah.jpg" alt="placeholder">
+            <img class="profilepic" src="images/sarah.jpg" alt="placeholder">
             <div class="profiletext">
             <h4>Name:</h4>
             <p>Sarah Perry</p>
@@ -101,7 +101,7 @@
             </div>
         </div>
         <div class="amanda">
-            <img class="profilepic" src="/images/amanda.jpg" alt="placeholder">
+            <img class="profilepic" src="images/amanda.jpg" alt="placeholder">
             <div class="profiletext">
             <h4>Name:</h4>
             <p>Amanda</p>
@@ -112,7 +112,7 @@
             </div>
         </div>
         <div class="nataly">
-            <img class="profilepic" src="/images/image000000.jpeg" alt="placeholder">
+            <img class="profilepic" src="images/image000000.jpeg" alt="placeholder">
             <div class="profiletext">
             <h4>Name:</h4>
             <p>Nataly Tomczak</p>
@@ -123,7 +123,7 @@
             </div>
         </div>
         <div class="julie">
-            <img class="profilepic" src="/images/julie.jpg" alt="placeholder">
+            <img class="profilepic" src="images/julie.jpg" alt="placeholder">
             <div class="profiletext">
             <h4>Name:</h4>
             <p>Julie</p>
@@ -153,3 +153,4 @@
 </body>
 
 </html>
+
