--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,7 @@
   <!-- other pages here -->
    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/picnic">
   <link  rel="stylesheet" href="css/styles.css">
+  <link rel="icon" href="images/favicon.jpg">
   <link rel="Home" href="index.html">
   <link rel="Team" href="team.html">
   <link rel="Contact" href="contact.html">
@@ -93,3 +94,4 @@
 </body>
 
 </html>
+
