Update index.html to comply with new img names and W3C

--- a/index.html
+++ b/index.html
@@ -1,19 +1,15 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html lang="en">
   
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, 
-       initial-scale-1, shrink-to-fit=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Vitality Through Tradition</title>
   <!-- other pages here -->
    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/picnic">
-  <link  rel="stylesheet" href="css/styles.css">
-  <link rel="icon" href="images/favicon.jpg">
-  <link rel="Home" href="index.html">
-  <link rel="Team" href="team.html">
-  <link rel="Contact" href="contact.html">
-  <link rel="Gallery" href="gallery.html">
+   <link  rel="stylesheet" href="css/styles.css">
+  <!-- favicon -->
+    <link rel="icon" href="images/favicon.ico">
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Delius&family=Great+Vibes&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Roboto+Condensed:ital@0;1&family=Zain&display=swap" rel="stylesheet">
@@ -32,15 +28,13 @@
             <li><a href="gallery.html">Gallery</a></li>
             </ul>
             <h3>Vitality Through Tradition</h3>
-            <a id="navbutton" href="https://groupme.com/join_group/108525960/rVFgIxT9">
-                <button id="navbuttonb">Join Our Groupme!</button>
-            </a>
+            <a id="navbutton" href="https://groupme.com/join_group/108525960/rVFgIxT9">Join Our Groupme!</a>
     </div>
 
     <main class="mainh">
         <div class="imagetexth">
             <h2>Welcome to VTT, nice to meet you!</h2>
-            <img id="homeimg"src="images/VTT IMG (1).png" alt="a women flexing on a cream background">
+            <img id="homeimg" src="images/VTTIMG1.png" alt="a women flexing on a cream background">
         </div>
 
         <div class="maininfo">
@@ -58,6 +52,7 @@
                     <p>Our daily meetings consist of a guided workout by one of our trained student instructors focusing on one or two muscle groups. We also do events with other clubs that can be social, volunteering, or fundraising based!</p>
                 </div>
 
+            </div>
         </div>
 
 
@@ -75,4 +70,3 @@
 </body>
 
 </html>
-
