Update index.html to change navbutton id to class

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <li><a href="gallery.html">Gallery</a></li>
             </ul>
             <h3>Vitality Through Tradition</h3>
-            <a id="navbutton" href="https://groupme.com/join_group/108525960/rVFgIxT9">Join Our Groupme!</a>
+            <a class="navbutton" href="https://groupme.com/join_group/108525960/rVFgIxT9">Join Our Groupme!</a>
     </div>
 
     <main class="mainh">
@@ -70,3 +70,4 @@
 </body>
 
 </html>
+
