--- a/team.html
+++ b/team.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html lang="en">
   
 <head>
@@ -9,11 +9,7 @@
   <!-- other pages here -->
    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/picnic">
   <link  rel="stylesheet" href="css/styles.css">
-  <link rel="icon" href="images/favicon.jpg">
-  <link rel="Home" href="index.html">
-  <link rel="Team" href="team.html">
-  <link rel="Contact" href="contact.html">
-  <link rel="Gallery" href="gallery.html">
+  <link rel="icon" href="images/favicon.ico">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -33,9 +29,7 @@
             <li><a href="gallery.html">Gallery</a></li>
             </ul>
             <h3>Vitality Through Tradition</h3>
-            <a id="navbutton" href="https://groupme.com/join_group/108525960/rVFgIxT9">
-                <button id="navbuttonb">Join Our Groupme!</button>
-            </a>
+            <a class="navbutton" href="https://groupme.com/join_group/108525960/rVFgIxT9">Join Our Groupme!</a>
     </div>
 
     <main class="maint">
@@ -43,7 +37,7 @@
         <div class="execs">
 
         <div class="becky">
-            <img class="profilepic" src="images/IMG_4766.png" alt="placeholder">
+            <img class="profilepic" src="images/IMG_4766.png" alt="Rebecca posing on some stone steps">
             <div class="profiletext">
             <h4>Name:</h4>
             <p>Rebecca Laruffa</p>
@@ -56,7 +50,7 @@
         </div>
 
         <div class="eleanor">
-            <img class="profilepic" src="images/IMG_7371.png" alt="placeholder">
+            <img class="profilepic" src="images/IMG_7371.png" alt="Eleanor posing in a street">
             <div class="profiletext">
             <h4>Name:</h4>
             <p>Eleanor Nyguen</p>
@@ -69,7 +63,7 @@
         </div>
 
         <div class="Anderson">
-            <img class="profilepic" src="images/anderson.jpg" alt="placeholder">
+            <img class="profilepic" src="images/anderson.jpg" alt="Anderson taking a selfie ontop of a mountain in Scotland">
             <div class="profiletext">
             <h4>Name:</h4>
             <p>Anderson Stark</p>
@@ -80,7 +74,7 @@
             </div>
         </div>
         <div class="jeslyn">
-            <img class="profilepic" src="images/jeslyn.jpg" alt="placeholder">
+            <img class="profilepic" src="images/jeslyn.jpg" alt="A digital photo dated 8/12/2025 of jeslyn in a kitchen">
             <div class="profiletext">
             <h4>Name:</h4>
             <p>Jeslyn Pratiknjo</p>
@@ -91,7 +85,7 @@
             </div>
         </div>
         <div class="sarah">
-            <img class="profilepic" src="images/sarah.jpg" alt="placeholder">
+            <img class="profilepic" src="images/sarah.jpg" alt="Sarah in front of a brick wall">
             <div class="profiletext">
             <h4>Name:</h4>
             <p>Sarah Perry</p>
@@ -102,7 +96,7 @@
             </div>
         </div>
         <div class="amanda">
-            <img class="profilepic" src="images/amanda.jpg" alt="placeholder">
+            <img class="profilepic" src="images/amanda.jpg" alt="Amanda posing in front of a white wall in formal attire">
             <div class="profiletext">
             <h4>Name:</h4>
             <p>Amanda</p>
@@ -113,7 +107,7 @@
             </div>
         </div>
         <div class="nataly">
-            <img class="profilepic" src="images/image000000.jpeg" alt="placeholder">
+            <img class="profilepic" src="images/image000000.jpeg" alt="Nataly posing for a professional headshot">
             <div class="profiletext">
             <h4>Name:</h4>
             <p>Nataly Tomczak</p>
@@ -124,7 +118,7 @@
             </div>
         </div>
         <div class="julie">
-            <img class="profilepic" src="images/julie.jpg" alt="placeholder">
+            <img class="profilepic" src="images/julie.jpg" alt="Julie holding a cup on UNC campus looking at the camera">
             <div class="profiletext">
             <h4>Name:</h4>
             <p>Julie</p>
@@ -154,5 +148,3 @@
 </body>
 
 </html>
-
-
