--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html lang="en">
   
 <head>
@@ -9,11 +9,7 @@
   <!-- other pages here -->
    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/picnic">
   <link  rel="stylesheet" href="css/styles.css">
-  <link rel="icon" href="images/favicon.jpg">
-  <link rel="Home" href="index.html">
-  <link rel="Team" href="team.html">
-  <link rel="Contact" href="contact.html">
-  <link rel="Gallery" href="gallery.html">
+  <link rel="icon" href="images/favicon.ico">
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Delius&family=Great+Vibes&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Roboto+Condensed:ital@0;1&family=Zain&display=swap" rel="stylesheet">
@@ -32,9 +28,7 @@
             <li><a href="gallery.html">Gallery</a></li>
             </ul>
             <h3>Vitality Through Tradition</h3>
-            <a id="navbutton" href="https://groupme.com/join_group/108525960/rVFgIxT9">
-                <button id="navbuttonb">Join Our Groupme!</button>
-            </a>
+            <a class="navbutton" href="https://groupme.com/join_group/108525960/rVFgIxT9">Join Our Groupme!</a>
     </div>
 
     <main class="mainc">
@@ -45,10 +39,10 @@
                 <p>Got Questions or Inquires? Fill out this form and a team member will get back to you ASAP!</p>
 
                 <label for="name">Name:</label>
-                <input type="text" id="name" name="name" required />
+                <input type="text" id="name" name="name" required >
 
                 <label for="email">Email:</label>
-                <input type="email" id="email" name="email" required />
+                <input type="email" id="email" name="email" required >
 
                 <label for="message">Message:</label>
                 <textarea id="message" name="message" rows="4" required></textarea>
@@ -94,4 +88,3 @@
 </body>
 
 </html>
-
