--- a/gallery.html
+++ b/gallery.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html lang="en">
   
 <head>
@@ -9,11 +9,7 @@
   <!-- other pages here -->
    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/picnic">
   <link  rel="stylesheet" href="css/styles.css">
-  <link rel="icon" href="images/favicon.jpg">
-  <link rel="Home" href="index.html">
-  <link rel="Team" href="team.html">
-  <link rel="Contact" href="contact.html">
-  <link rel="Gallery" href="gallery.html">
+  <link rel="icon" href="images/favicon.ico">
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Delius&family=Great+Vibes&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Roboto+Condensed:ital@0;1&family=Zain&display=swap" rel="stylesheet">
@@ -32,9 +28,7 @@
             <li><a href="gallery.html"><b>Gallery</b></a></li>
             </ul>
             <h3>Vitality Through Tradition</h3>
-            <a id="navbutton" href="https://groupme.com/join_group/108525960/rVFgIxT9">
-                <button id="navbuttonb">Join Our Groupme!</button>
-            </a>
+            <a class="navbutton" href="https://groupme.com/join_group/108525960/rVFgIxT9">Join Our Groupme!</a>
     </div>
     <div class="gwrap">
         <h2>Photo Gallery</h2>
@@ -47,27 +41,25 @@
             <input id="tabC-4" type='radio' name='tabGroupC'>
             <div class='row'>
                 <div>
-                <img src="images/groupimageedited.jpg">
+                <img src="images/groupimageedited.jpg" alt="10 VTT members posing in front of a mirror">
                 </div>
                 <div>
-                <img src="images/IMG_2055.JPG">
+                <img src="images/IMG_2055.JPG" alt="Rebecca and a VTT member having a conversation">
                 </div>
                 <div>
-                <img src="images/IMG_2061.JPG">
+                <img src="images/IMG_2061.JPG" alt="Rebecca and Eleanor posing with Liquid.IV after a meeting">
                 </div>
                 <div>
-                <img src="images/IMG_2073.JPG">
+                <img src="images/IMG_2073.JPG" alt="Rebecca and Eleanor jumping and high fiving">
                 </div>
             </div>
-            <label for="tabC-1"><img src="images/groupimageedited.jpg"></label>
-            <label for="tabC-2"><img src="images/IMG_2055.JPG"></label>
-            <label for="tabC-3"><img src="images/IMG_2061.JPG"></label>
-            <label for="tabC-4"><img src="images/IMG_2073.JPG"></label>
+            <label for="tabC-1"><img src="images/groupimageedited.jpg" alt="10 VTT members posing in front of a mirror"></label>
+            <label for="tabC-2"><img src="images/IMG_2055.JPG" alt="Rebecca and a VTT member having a conversation"></label>
+            <label for="tabC-3"><img src="images/IMG_2061.JPG" alt="Rebecca and Eleanor posing with Liquid.IV after a meeting"></label>
+            <label for="tabC-4"><img src="images/IMG_2073.JPG" alt="Rebecca and Eleanor jumping and high fiving"></label>
             </div>
+            </main>
             </div>
-
-
-    </main>
 
     <footer class="footer">
         <p id="footertext">Vitality Through Tradition</p>
@@ -81,4 +73,3 @@
 </body>
 
 </html>
-
