--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
     </main>
 
     <footer class="footer">
-        <p id="footertext">Vitality Through Tradition</p>
+        <p>Vitality Through Tradition</p>
         <p>"Achieving Progress Through Practice"</p>
-        <p>Email: vitalitythroughtradition@gmail.com</p>
+        <a href="mailto:vitalitythroughtradition@gmail.com">vitalitythroughtradition@gmail.com</a>
         <a href="https://heellife.unc.edu/organization/vtt">Join us on Heel Life!</a>
         <a href="https://www.instagram.com/uncvtt?igsh=MW5tNXFhcTdhMmJkOA==">Follow us on Instagram!</a>
     </footer>
@@ -70,4 +70,3 @@
 </body>
 
 </html>
-
