--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 </div>
                 <div class="box2">
                     <h2>When do we meet?</h2>
-                    <p>We meet every Monday from 6-7pm in Fetzer room 15. Just walk into the SRC and ask a front desk employee if you can't find it!</p>
+                    <p>We meet every Monday and Wednesday from 5:30-6pm in Fetzer room 15. Just walk into the SRC and ask a front desk employee if you can't find it!</p>
                 </div>
                 <div class="box3">
                     <h2>What do we do?</h2>
@@ -70,3 +70,4 @@
 </body>
 
 </html>
+
